--- a/src/i18n/locales/it.json
+++ b/src/i18n/locales/it.json
@@ -460,6 +460,95 @@
       }
     }
   },
+  "pricing": {
+    "badge": "Offerta Early Adopter",
+    "title": "Scegli il tuo piano",
+    "subtitle": "Prezzi semplici e trasparenti. Nessun costo nascosto.",
+    "monthly": {
+      "title": "Mensile",
+      "price": "€4,99",
+      "period": "/mese",
+      "description": "Fatturazione mensile, annulla quando vuoi",
+      "discount": "Risparmia il 35%"
+    },
+    "premium": {
+      "title": "VitalsPath Premium",
+      "subtitle": "Sblocca tutto il potenziale della gestione della salute familiare.",
+      "features_title": "Tutto in Free, oltre a:",
+      "feature_desc": "Registrazioni illimitate in tutti i servizi."
+    },
+    "free": {
+      "title": "Free",
+      "price": "€0",
+      "period": "/sempre",
+      "description": "Funzionalità essenziali per individui",
+      "discount": "Sempre Free"
+    },
+    "annual": {
+      "title": "Annuale",
+      "badge": "MIGLIOR VALORE",
+      "price": "€39,99",
+      "period": "/anno",
+      "description": "Fatturazione annuale, risparmia il 33%",
+      "discount": "Risparmia il 35%"
+    },
+    "lifetime": {
+      "title": "Lifetime",
+      "price": "€149,99",
+      "period": "una sola volta",
+      "description": "Pagamento unico, per sempre",
+      "discount": "Risparmia il 15%"
+    },
+    "features": {
+      "unlimited_profiles": "Profili illimitati",
+      "unlimited_profiles_desc": "Gestisci tutta la tua famiglia senza limiti.",
+      "unlimited_diseases": "Malattie illimitate",
+      "unlimited_medications": "Farmaci illimitati",
+      "unlimited_treatments": "Trattamenti illimitati",
+      "extended_pause": "Pausa prolungata",
+      "extend_medication": "Estendi farmaco",
+      "full_schedule": "Pianificazione completa",
+      "quiet_schedule": "Pianificazione silenziosa",
+      "stock_inventory": "Scorte e Inventario",
+      "export_pdf_csv": "Esporta in PDF/CSV",
+      "export_pdf_csv_desc": "I tuoi dati sempre con te in più formati.",
+      "advanced_analytics": "Analisi avanzate",
+      "advanced_analytics_desc": "Grafici dettagliati dei tuoi progressi di salute.",
+      "health_reports": "Report salute",
+      "health_reports_desc": "Esporta report dettagliati per il tuo medico.",
+      "ocr_scanner": "Scanner OCR farmaci",
+      "healthkit": "Integrazione HealthKit",
+      "complex_symptoms": "Tracciamento sintomi complessi",
+      "icloud_backup": "Backup iCloud",
+      "icloud_backup_desc": "Protocollo Apple. Può essere fatto anche localmente.",
+      "all_themes": "Tutti i temi",
+      "all_themes_desc": "Personalizzazione completa con temi dinamici.",
+      "advanced_notifications": "Notifiche avanzate",
+      "advanced_notifications_desc": "Avvisi critici e promemoria intelligenti.",
+      "haptic_feedback": "Feedback aptico",
+      "haptic_feedback_desc": "Navigazione tattile immersiva.",
+      "widget_styles": "Stili widget",
+      "widget_styles_desc": "Varie dimensioni e layout per la home.",
+      "basic_profiles": "1 Profilo (Illimitati in Premium)",
+      "basic_medications": "3 Farmaci per profilo",
+      "local_reminders": "Promemoria base",
+      "wellness_score": "Punteggio Benessere",
+      "wellness_details": "Analisi fattori avanzata",
+      "smart_scheduler": "Controllo conflitti",
+      "smart_scheduler_ia": "Ottimizzazione automatica IA",
+      "smart_scheduler_ia_desc": "Ottimizzazione intelligente delle assunzioni.",
+      "appointments_limit": "3 Appuntamenti al mese",
+      "unlimited_appointments": "Appuntamenti illimitati",
+      "locations_limit": "2 Luoghi preferiti",
+      "unlimited_locations": "Luoghi illimitati",
+      "insurance_limit": "1 Assicurazione medica",
+      "symptoms_basic": "Sintomi base",
+      "symptoms_complex": "Sintomi complessi",
+      "inventory_basic": "Scorte base e Scadenza"
+    },
+    "cta": "Disponibile a breve",
+    "cta_alt": "Iscrivimi"
+  },
   "feedback": {
     "title": "Il Tuo Feedback",
     "subtitle": "Aiutaci a migliorare VitalsPath condividendo le tue idee, segnalando problemi o suggerendo nuove funzionalità.",
