--- a/src/i18n/locales/pt.json
+++ b/src/i18n/locales/pt.json
@@ -460,6 +460,95 @@
       }
     }
   },
+  "pricing": {
+    "badge": "Oferta de Lançamento",
+    "title": "Escolha seu plano",
+    "subtitle": "Preços simples e transparentes. Sem taxas escondidas.",
+    "monthly": {
+      "title": "Mensal",
+      "price": "€4,99",
+      "period": "/mês",
+      "description": "Faturamento mensal, cancele quando quiser",
+      "discount": "Economize 35%"
+    },
+    "premium": {
+      "title": "VitalsPath Premium",
+      "subtitle": "Desbloqueie todo o potencial da gestão de saúde familiar.",
+      "features_title": "Tudo no Gratuito, mais:",
+      "feature_desc": "Registros ilimitados em todos os serviços."
+    },
+    "free": {
+      "title": "Gratuito",
+      "price": "€0",
+      "period": "/para sempre",
+      "description": "Recursos essenciais para indivíduos",
+      "discount": "Sempre Gratuito"
+    },
+    "annual": {
+      "title": "Anual",
+      "badge": "MELHOR VALOR",
+      "price": "€39,99",
+      "period": "/ano",
+      "description": "Faturamento anual, economize 33%",
+      "discount": "Economize 35%"
+    },
+    "lifetime": {
+      "title": "Vitalício",
+      "price": "€149,99",
+      "period": "pagamento único",
+      "description": "Pagamento único, para sempre",
+      "discount": "Economize 15%"
+    },
+    "features": {
+      "unlimited_profiles": "Perfis ilimitados",
+      "unlimited_profiles_desc": "Gerencie toda a sua família sem limites.",
+      "unlimited_diseases": "Doenças ilimitadas",
+      "unlimited_medications": "Medicamentos ilimitados",
+      "unlimited_treatments": "Tratamentos ilimitados",
+      "extended_pause": "Pausa estendida",
+      "extend_medication": "Estender medicação",
+      "full_schedule": "Cronogramas completos",
+      "quiet_schedule": "Cronograma silencioso",
+      "stock_inventory": "Estoque e Inventário",
+      "export_pdf_csv": "Exportar para PDF/CSV",
+      "export_pdf_csv_desc": "Seus dados sempre com você em vários formatos.",
+      "advanced_analytics": "Análises avançadas",
+      "advanced_analytics_desc": "Gráficos detalhati do seu progresso de saúde.",
+      "health_reports": "Relatórios de saúde",
+      "health_reports_desc": "Exporte relatórios detalhados para o seu médico.",
+      "ocr_scanner": "Scanner OCR de medicamentos",
+      "healthkit": "Integração HealthKit",
+      "complex_symptoms": "Rastreamento de sintomas complexos",
+      "icloud_backup": "Backup iCloud",
+      "icloud_backup_desc": "Protocolo Apple. Também pode ser feito localmente.",
+      "all_themes": "Todos os temas",
+      "all_themes_desc": "Personalização completa com temas dinâmicos.",
+      "advanced_notifications": "Notificazioni avançadas",
+      "advanced_notifications_desc": "Alertas críticos e lembretes inteligentes.",
+      "haptic_feedback": "Resposta háptica",
+      "haptic_feedback_desc": "Navegação tátil imersiva.",
+      "widget_styles": "Estilos de widget",
+      "widget_styles_desc": "Vários tamanhos e layouts para sua tela inicial.",
+      "basic_profiles": "1 Perfil (Ilimitados no Premium)",
+      "basic_medications": "3 Medicamentos por perfil",
+      "local_reminders": "Lembretes básicos",
+      "wellness_score": "Índice de Bem-Estar",
+      "wellness_details": "Detalhamento de fatores avançados",
+      "smart_scheduler": "Verificador de conflitos",
+      "smart_scheduler_ia": "Otimização automática por IA",
+      "smart_scheduler_ia_desc": "Otimização inteligente de doses e lembretes.",
+      "appointments_limit": "3 Consultas por mês",
+      "unlimited_appointments": "Consultas ilimitadas",
+      "locations_limit": "2 Locais favoritos",
+      "unlimited_locations": "Locais ilimitados",
+      "insurance_limit": "1 Seguro saúde",
+      "symptoms_basic": "Sintomas básicos",
+      "symptoms_complex": "Sintomas complexos",
+      "inventory_basic": "Estoque básico e Validade"
+    },
+    "cta": "Em breve",
+    "cta_alt": "Inscreva-me"
+  },
   "feedback": {
     "title": "Envie seu Feedback",
     "subtitle": "Sua opinião nos ajuda a melhorar o VitalsPath para você e sua família.",
