feat(i18n): extract hardcoded landing texts to JSON locales and support 15 languages in FinalCTA

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -246,7 +246,13 @@
         "name": "المميز:",
         "description": "ملفات متعددة غير محدودة، تحليلات كاملة."
       }
-    }
+    },
+    "badgeOffer": "عرض الإطلاق: خصم ٢٥٪",
+    "privacyTitle": "خصوصية تامة",
+    "privacyDesc": "بياناتك لا تغادر جهازك أبداً.",
+    "discountDesc": "حصري للأعضاء الأوائل.",
+    "joinTitle": "انضم للقائمة",
+    "joinDesc": "احصل على دعوة حصرية عند الإطلاق."
   },
   "footer": {
     "features": "المميزات",
