--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -238,7 +238,13 @@
         "name": "प्रीमियम:",
         "description": "अनलिमिटेड मल्टी-प्रोफाइल, पूर्ण एनालिटिक्स।"
       }
-    }
+    },
+    "badgeOffer": "लॉन्च ऑफर: -25% छूट",
+    "privacyTitle": "पूर्ण गोपनीयता",
+    "privacyDesc": "आपका डेटा कभी भी आपका डिवाइस नहीं छोड़ता।",
+    "discountDesc": "शुरुआती सदस्यों के लिए विशेष।",
+    "joinTitle": "प्रतीक्षा सूची में शामिल हों",
+    "joinDesc": "लॉन्च होने पर विशेष आमंत्रण प्राप्त करें।"
   },
   "footer": {
     "features": "विशेषताएं",
