--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -238,7 +238,13 @@
         "name": "Premium:",
         "description": "безлимит профили, полная аналитика."
       }
-    }
+    },
+    "badgeOffer": "Стартовое предложение: скидка -25%",
+    "privacyTitle": "Полная Конфиденциальность",
+    "privacyDesc": "Ваши данные никогда не покидают устройство.",
+    "discountDesc": "Эксклюзивно для первых участников.",
+    "joinTitle": "Присоединиться к списку",
+    "joinDesc": "Получите эксклюзивное приглашение при запуске."
   },
   "footer": {
     "features": "Функции",
